# mojito

./: TODO  indent-input.txt  indent.hs  mojito.cabal  mojito.hs  shell.nix  simple-typechecking.cabal  simple.hs
Language/Mojito/Inference/: Context.hs  Substitution.hs  Unification.hs
Language/Mojito/Inference/Cardelli/: Cardelli.hs  Environment.hs  Inferencer.hs  Prelude.hs
Language/Mojito/Inference/SystemCT1999/: Context.hs  Inferencer.hs  LCG.hs  Narrative.hs  NarrativeHtml.hs  Note.hs  Prelude.hs  Substitution.hs  SystemCT1999.hs  SystemCT1999Html.hs
Language/Mojito/Interpretation/: Values.hs
Language/Mojito/Prelude/: Types.hs
Language/Mojito/Syntax/: Expr.hs  ExprBuilder.hs  Indent.hs  SExpr.hs  Types.hs
Language/Simple/Inference/Cardelli/: Cardelli.hs
Language/Simple/Inference/SystemCT1999/: Context.hs  Note.hs  Prelude.hs  Substitution.hs  SystemCT1999.hs  SystemCT1999Html.hs
Language/Simple/Interpretation/: Values.hs
Language/Simple/Prelude/: Types.hs
Language/Simple/Syntax/: Expr.hs  ExprBuilder.hs  SExpr.hs
